# geovision

./: .gitignore  jarvislabs_setup.sh  pyproject.toml  setup.sh
docs/: datasets.md  pipeline.md  todo.md  train_imagenet.yaml
geovision/analysis/: attrconfig.yaml  attribution.py  embedding.py  metrics.py  plot_experiment.py  spatial.py  viz.py
geovision/config/: __init__.py  basemodels.py  config.py  experiment_config.py  parser.py  parsers.py  registers.py
geovision/configs/: inria_resnet50_unet_ddp_train.yaml  resisc_resnet50_ddp_train.yaml
geovision/data/: __init__.py  _to_litdata.py  bboxes.csv  cityosm.py  config.py  custom_transforms.py  dataset.py  fmow.py  hyspecnet11k.py  imagenet.py  imagenette.py  inria.py  interfaces.py  isprs.py  module.py  opencities.py  ramp.py  resisc45.py  samplers.py  so2sat_pop.py  spacenet.py  spectral_earth.py  tests.py  transforms.py  urban_insights.py  utils.py
geovision/experiment/: config.py  loggers.py  loggers2.py  metrics.py  plot_metrics.py  utils.py  visualization.py
geovision/io/: local.py  remote.py
geovision/loggers/: experiment_loggers.py
geovision/logging/: __init__.py  loggers.py
geovision/models/: __init__.py  alexnet.py  blocks.py  interfaces.py  losses.py  module.py  modules.py  resnet.py  unet.py
geovision/scripts/: config.yaml  eda.ipynb  eda_buildings_and_roads.ipynb  eda_fmow.ipynb  eda_hsi.ipynb  eda_imagenet.ipynb  eda_inria.ipynb  eda_spectral_earth.ipynb  eda_temp.py  experiment.ipynb  fmow_analysis.ipynb  gan.py  ilsvrc.py  infer.py  metacogntion.ipynb  new_config.yaml  run.py  setup.sh  test_data.py  to_litdata.py  train.py
geovision/training/: eval.py  loggers.py  metrics.py  module.py  test.py
notes/: references.typ  testing_geovision.typ  tests.md
ref/geovision/training/: _loggers.py  config.py
ref/urban-feature-extraction/: extraction-colab.ipynb
ref/urban-feature-extraction/etl/: downloader.py  extraction.ipynb
ref/urban-insights/: requirements.txt
ref/urban-insights/datasets/: inria.py
ref/urban-insights/notebooks/: experiments.ipynb
tests/: conftest.py  test_dataset.py
