[project]
authors = [{name = "Sambhav Chandra", email = "vader.sam10@gmail.com"}]
name = "geovision"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ty.environment]
root = ["./geovision"]
python-version = "3.12"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py312"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.devel.dependencies]
scikit-image = ">=0.25.2,<0.26"
imageio = ">=2.37.0,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.1.1,<2"
fiona = ">=1.10.1,<2"
folium = ">=0.20.0,<0.21"
seaborn = ">=0.13.2,<0.14"
geopy = ">=2.4.1,<3"
cartopy = ">=0.25.0,<0.26"
imagecodecs = ">=2025.8.2,<2026"
pandera-pandas = ">=0.24.0,<0.25"
pandera-geopandas = ">=0.24.0,<0.25"
h5py = ">=3.14.0,<4"
pytables = ">=3.10.2,<4"
wandb = ">=0.21.1,<0.22"
py7zr = ">=1.0.0,<2"
s5cmd = ">=2.3.0,<3"
aiofiles = ">=24.1.0,<25"
rsync = ">=3.4.1,<4"
rich = ">=14.1.0,<15"
pytest = ">=8.4.1,<9"
ipykernel = ">=6.30.1,<7"
ipympl = ">=0.9.7,<0.10"
ruff = ">=0.12.10,<0.13"
pyyaml = ">=6.0.2,<7"
python-dotenv = ">=1.1.1,<2"
nvitop = ">=1.5.3,<2"

[tool.pixi.feature.cuda126.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.cuda126.pypi-dependencies]
geovision = { path = ".", editable = true }
torch = {version = ">=2.8.0", index = "https://download.pytorch.org/whl/cu126"}
torchvision = {version = ">=0.23", index = "https://download.pytorch.org/whl/cu126"}
torchgeo = {version = ">=0.7.0"}

[tool.pixi.feature.attribution.pypi-dependencies]
captum = {version = ">=0.8.0"}

[tool.pixi.environments]
dev = ["cuda126", "devel"] 
attrib = ["cuda126", "attribution"]

[dependency-groups]
devel = ["memory-profiler>=0.61.0,<0.62"]
